--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cee7c5e
-	base = fe2b813
-	trim = 
-	trimbase = 
+	base = 8ea00f5
+	trim = agents
+	trimbase = fe2b813
