--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cee7c5e
-	base = 7e1f0ad
-	trim = 
-	trimbase = 
+	base = d8a1d1f
+	trim = agents
+	trimbase = 7e1f0ad
