--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cee7c5e
-	base = 739f152
-	trim = 
-	trimbase = 
+	base = 851260e
+	trim = agents
+	trimbase = 739f152
