--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cee7c5e4d164
-	base = 3483ed676b46
+	base = 5b5c25618c89
 	trim = agents
-	trimbase = 
+	trimbase = 3483ed676b46
