--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/kilted/automatika_embodied_agents
-	previous = 
-	base = 2078b9086798
+	previous = 2078b9086798
+	base = 6caf0da9b93a
 	trim = 
 	trimbase = 
