--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/automatika_embodied_agents
-	previous = 
-	base = 5b5c25618c89
+	previous = 5b5c25618c89
+	base = edfe4b9748f6
 	trim = 
 	trimbase = 
