--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/kilted/automatika_embodied_agents
-	previous = 
-	base = 09e563e41304
+	previous = 09e563e41304
+	base = 78342c3d9a7b
 	trim = 
 	trimbase = 
