--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/automatika_embodied_agents
-	previous = 
-	base = 35403030ac9d
+	previous = 35403030ac9d
+	base = 13b4a24f4928
 	trim = 
 	trimbase = 
