--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/automatika_embodied_agents
-	previous = 
-	base = 3b88f76
+	previous = 3b88f76
+	base = 07ac0f8
 	trim = 
 	trimbase = 
