--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/automatika_embodied_agents
-	previous = 
-	base = a1ba10d
+	previous = a1ba10d
+	base = 92fbf33
 	trim = 
 	trimbase = 
