--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/automatika_embodied_agents
-	previous = 
-	base = 27b5f10
+	previous = 27b5f10
+	base = 2068876
 	trim = 
 	trimbase = 
