--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/automatika_embodied_agents
-	previous = 
-	base = 1ab6628
+	previous = 1ab6628
+	base = 84e9483
 	trim = 
 	trimbase = 
