--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/automatika_embodied_agents
-	previous = 
-	base = 2544651
+	previous = 2544651
+	base = 950b91b
 	trim = 
 	trimbase = 
