--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/automatika_embodied_agents
-	previous = 
-	base = 44d37ed
+	previous = 44d37ed
+	base = 6ff53d0
 	trim = 
 	trimbase = 
