--- a/package.xml
+++ b/package.xml
@@ -2,17 +2,18 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>automatika_embodied_agents</name>
-  <version>0.3.2</version>
+  <version>0.4.1</version>
   <description>agents</description>
   <maintainer email="contact@automatikarobotics.com">Automatika Robotics</maintainer>
+  <url type="website">https://github.com/automatika-robotics/embodied-agents</url>
   <license>MIT</license>
 
   <depend>builtin_interfaces</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>python3-tqdm</depend>
-  <depend>python3-platformdirs</depend>
   <depend>python3-httpx</depend>
+  <depend>python3-platformdirs</depend>
   <depend>automatika_ros_sugar</depend>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
