Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.2-2": ["Wed Apr 23 2025", "Automatika Robotics", "contact@automatikarobotics.com"]}
+{"0.4.1-1": ["Thu Jul 10 2025", "Automatika Robotics", "contact@automatikarobotics.com"], "0.3.2-2": ["Wed Apr 23 2025", "Automatika Robotics", "contact@automatikarobotics.com"]}
