--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/automatika_embodied_agents
-	previous = 
-	base = f83154c
+	previous = f83154c
+	base = 83ed28f
 	trim = 
 	trimbase = 
