--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/automatika_embodied_agents
-	previous = 
-	base = 2d67f27
+	previous = 2d67f27
+	base = 67701b7
 	trim = 
 	trimbase = 
