--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/automatika_embodied_agents
-	previous = 
-	base = f727a5b
+	previous = f727a5b
+	base = 404ba43
 	trim = 
 	trimbase = 
