--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/automatika_embodied_agents
-	previous = 
-	base = 2b866e4
+	previous = 2b866e4
+	base = 2553df9
 	trim = 
 	trimbase = 
