Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.4.1-1": ["Thu Jul 10 2025", "Automatika Robotics", "contact@automatikarobotics.com"]}
+{"0.4.2-1": ["Wed Sep 03 2025", "Automatika Robotics", "contact@automatikarobotics.com"], "0.4.1-1": ["Thu Jul 10 2025", "Automatika Robotics", "contact@automatikarobotics.com"]}
